<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">task_management</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_wash_clothes2">Wash Clothes </string>
  <string name="lbl_thu">Thu</string>
  <string name="lbl_employees">Employees</string>
  <string name="lbl_wash_clothes3">Wash clothes</string>
  <string name="lbl_back">Back</string>
  <string name="lbl_logout">Logout</string>
  <string name="lbl_jakob_septimus">Jakob Septimus</string>
  <string name="msg_nyakimincha_nya2">Nyakimincha Nyambane</string>
  <string name="msg_confirm_passwor">Confirm Password</string>
  <string name="lbl_65">65%</string>
  <string name="lbl_today_s_tasks">Today\u2019s Tasks </string>
  <string name="msg_buying_mother_m">Buying Mother Medicine</string>
  <string name="lbl_or_login_with">Or Login With </string>
  <string name="lbl_about">About</string>
  <string name="lbl_26_employees">26 Employees </string>
  <string name="lbl_date_of_birth">Date of Birth</string>
  <string name="msg_create_your_acc">Create your account</string>
  <string name="lbl_description">Description</string>
  <string name="msg_62_812_1287_19">+62 812-1287-1999</string>
  <string name="msg_sep_21_sep">Sep, 21 - Sep, 22</string>
  <string name="msg_254_812_1285_1">+254 812-1285-1764</string>
  <string name="lbl_tasks">Tasks</string>
  <string name="msg_62_812_9639_99">+62 812-9639-9978</string>
  <string name="msg_jacobkamau_gmai">jacobKamau@gmail.com</string>
  <string name="msg_writing_is_a_me">Writing is a medium of human communication that involves the representation of a language through a system of physically inscribed, mechanically transferred, or digitally represented symbols. Writing systems are not themselves human languages (with the debatable exception of computer languages);</string>
  <string name="lbl_edit">Edit</string>
  <string name="msg_or_register_wit">Or Register with</string>
  <string name="msg_welcome_nyamban">Welcome Nyambane </string>
  <string name="msg_2653_task_compl">2653 Task Completed</string>
  <string name="msg_nyakimincha_nya">Nyakimincha Nyambane </string>
  <string name="msg_forgot_password">Forgot password?</string>
  <string name="lbl_tien_tom">Tien Tom </string>
  <string name="lbl_clean_pantry">Clean
Pantry</string>
  <string name="lbl_cancel">Cancel</string>
  <string name="lbl_ends">Ends</string>
  <string name="msg_254_812_9855_1">+254 812-9855-1868</string>
  <string name="lbl_username">Username</string>
  <string name="lbl_wed">Wed</string>
  <string name="lbl_jakob_siphron">Jakob Siphron</string>
  <string name="lbl_janet_kamau">Janet Kamau</string>
  <string name="lbl_sun">Sun</string>
  <string name="lbl_edit_profile">Edit Profile</string>
  <string name="lbl_select_employee">Select Employee</string>
  <string name="msg_the_wash_cloth">The "Wash Clothes" task involves cleaning and maintaining your clothing and fabric items to ensure they remain fresh, hygienic, and in good condition. Regular washing of clothes is essential for personal hygiene and to extend the lifespan of your garments.</string>
  <string name="lbl_in_progress">In Progress</string>
  <string name="lbl_start">Start</string>
  <string name="lbl_profession">Profession</string>
  <string name="msg_62_812_1465_98">+62 812-1465-9898</string>
  <string name="lbl_make_breakfast">Make 
Breakfast</string>
  <string name="msg_62_812_1872_19">+62 812-1872-1988</string>
  <string name="msg_254_812_9875">+254  812-9875-1298</string>
  <string name="lbl_delete">delete</string>
  <string name="lbl_delete_task">Delete Task</string>
  <string name="lbl_cook_food">Cook Food </string>
  <string name="lbl_ui_ux_designer">UI UX Designer</string>
  <string name="lbl_30">30%</string>
  <string name="msg_vacuum_the_hous">Vacuum the House</string>
  <string name="lbl_wash_clothes">Wash Clothes</string>
  <string name="lbl_completed">Completed</string>
  <string name="lbl_assign_employee">Assign Employee </string>
  <string name="lbl_wash_utensils2">Wash Utensils </string>
  <string name="lbl_password">Password</string>
  <string name="lbl_title">Title</string>
  <string name="lbl_fri">Fri</string>
  <string name="lbl_invite_a_friend">Invite a friend</string>
  <string name="lbl_jaxson">Jaxson</string>
  <string name="lbl_view_employees">View Employees</string>
  <string name="lbl_task_name">Task Name </string>
  <string name="msg_have_a_nice_day">Have a nice day !</string>
  <string name="lbl_mon">Mon</string>
  <string name="lbl_jacob_kamau">Jacob Kamau</string>
  <string name="msg_254_812_1823_9">+254 812-1823-9878</string>
  <string name="lbl_my_profile">My Profile</string>
  <string name="msg_assignment_revi">Assignment Revision</string>
  <string name="lbl_20_days">20 days</string>
  <string name="msg_62_812_8725_15">+62 812-8725-1538</string>
  <string name="lbl_tue">Tue</string>
  <string name="msg_involves_washin">Involves washing all dirty clothes. 
To be noted: 
               Separate like colors 
               Don\u2019t deep colors with detergent 
               Rinse White clothes separately </string>
  <string name="lbl_role">Role</string>
  <string name="lbl_check_email">Check Email</string>
  <string name="lbl_10_days">10 days</string>
  <string name="lbl_20">20%</string>
  <string name="lbl_sep_16_2023">Sep-16-2023</string>
  <string name="msg_254_812_1855_1">+254 812-1855-1278</string>
  <string name="lbl_complete">Complete </string>
  <string name="lbl_category">Category</string>
  <string name="lbl_23">23</string>
  <string name="lbl_24">24</string>
  <string name="lbl_21">21</string>
  <string name="lbl_sep_a6_2023">Sep-a6-2023</string>
  <string name="lbl_22">22</string>
  <string name="lbl_kianna">Kianna</string>
  <string name="msg_janetkamau_apl">janetkamau@apl.com</string>
  <string name="msg_wednesday_20_se">Wednesday 20 September 2023</string>
  <string name="lbl_roger_aminoff">Roger Aminoff</string>
  <string name="msg_prepare_the_bed">Prepare the Beds</string>
  <string name="lbl_25_days">25 days</string>
  <string name="lbl_nairobi_kenya">Nairobi, Kenya </string>
  <string name="msg_feb_21_mar2">Feb, 21 - Mar, 30</string>
  <string name="lbl_edit_task">Edit Task</string>
  <string name="lbl_daily_task">Daily Task</string>
  <string name="msg_254_812_1855_8">+254 812-1855-8743</string>
  <string name="lbl_home_manager">Home manager</string>
  <string name="lbl_janet_kamau2">Janet
Kamau</string>
  <string name="msg_feb_21_mar">Feb, 21 - Mar, 27</string>
  <string name="msg_254_812_7635_8">+254 812-7635-8738</string>
  <string name="msg_already_registe">Already registered, Login here. </string>
  <string name="lbl_progress">Progress</string>
  <string name="lbl_sat">Sat</string>
  <string name="lbl_take_trash_out"> Take Trash Out</string>
  <string name="lbl_task_linker">TASK-Linker</string>
  <string name="msg_kianna_westerve">Kianna Westervelt</string>
  <string name="lbl_name">Name</string>
  <string name="lbl_18">18</string>
  <string name="lbl_19">19</string>
  <string name="lbl_dust_blankets">Dust 
Blankets</string>
  <string name="lbl_profile">Profile</string>
  <string name="lbl_register">Register</string>
  <string name="lbl_house_manager">House Manager</string>
  <string name="lbl_save">Save</string>
  <string name="msg_saturday_feb_2">Saturday, Feb 20 2022</string>
  <string name="msg_login_to_your_a">Login to your account</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_80">80%</string>
  <string name="lbl_pending_tasks">Pending Tasks </string>
  <string name="msg_task_updated_su">Task updated successfully</string>
  <string name="msg_my_priority_tas">My Priority Task</string>
  <string name="lbl_lindsey_vetrovs">Lindsey Vetrovs</string>
  <string name="msg_254_812_1875_1">+254 812-1875-1763</string>
  <string name="msg_new_to_tasklink">New to Tasklinker? Register here </string>
  <string name="lbl_2">2</string>
  <string name="msg_task_management">Task Management  App</string>
  <string name="lbl_202">20</string>
  <string name="lbl_wash_utensils">Wash Utensils</string>
  <string name="msg_food_creation_i">Food creation is an arduous task that involves really images, whether they are digital photographs, traditional photo-chemical photographs, or illustrations. Traditional analog image editing is known as photo retouching, using tools such as an airbrush to modify photographs or editing illustrations with any traditional art medium. </string>
  <string name="lbl_login">Login</string>
  <string name="msg_nyakiminchanyam">nyakiminchanyambane@apl.com</string>
  <string name="lbl_dec_16_2001">Dec-16-2001</string>
  <string name="lbl_sep_21_2023">Sep-21-2023</string>
  <string name="lbl_sep_21_sep_22">Sep 21 - Sep,22</string>
  <string name="lbl_create_task">Create Task</string>
  <string name="lbl_welcome_janet">Welcome Janet</string>
  <string name="lbl_to_do">To Do</string>
  <string name="lbl_add_employee">Add  Employee</string>
  <string name="lbl_completed_tasks">Completed Tasks</string>
  <string name="lbl_sep_2023">Sep, 2023</string>
  <string name="lbl_notification">Notification</string>
  <string name="lbl_task_mvp">Task MVP </string>
  <string name="msg_ashlynn_westerv">Ashlynn Westervelt</string>
  <string name="msg_dinner_with_lov">Dinner with Lover</string>
  <string name="msg_the_wash_utens">The "Wash Utensils" task involves cleaning and sanitizing various kitchen utensils, dishes, and cookware to maintain a clean and hygienic kitchen environment. This routine chore ensures that utensils are ready for safe and efficient use in food preparation and dining.</string>
  <string name="lbl_settings">Settings</string>
  <string name="lbl_writing_book">Writing Book   </string>
  <string name="lbl_update">update</string>
  <string name="lbl_help">Help</string>
  <string name="lbl_add_task">Add Task</string>
  <string name="msg_254_812_2955_1">+254 812-2955-1878</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>
