<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="employerEditTaskTodolistVM" type="com.taskmanagement.app.modules.employeredittasktodolist.data.viewmodel.EmployerEditTaskTodolistVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearEmployerEditT"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_9">
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_700_radius_10"
            android:ellipsize="end"
            android:hint="@string/lbl_wash_clothes3"
            android:id="@+id/etInputprimaryd" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_29pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={employerEditTaskTodolistVM.employerEditTaskTodolistModel.etInputprimarydValue}"
            android:textColorHint="@color/gray_802"
            style="@style/etSolidRoundedOutline_2" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnEditTask"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_edit_task"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline_1" tools:text="@string/lbl_edit_task"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnDeleteTask"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_delete_task"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline_1" tools:text="@string/lbl_delete_task"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnCancel"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_cancel"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline_1" tools:text="@string/lbl_cancel"/>
    </LinearLayout>
</layout>
