<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="employeeMyProfilePageVM" type="com.taskmanagement.app.modules.employeemyprofilepage.data.viewmodel.EmployeeMyProfilePageVM"/>
    </data>
    <LinearLayout android:id="@+id/linearColumnarrowleft"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_22pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblue_700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageButton
                    android:background="@drawable/rectangle_bg_white_a700_radius_10"
                    android:id="@+id/btnArrowleft"
                    android:layout_height="@dimen/_36pxh"
                    android:layout_width="@dimen/_36pxh"
                    android:paddingHorizontal="@dimen/_10pxh"
                    android:paddingVertical="@dimen/_10pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_arrowleft" tools:ignore="ContentDescription"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtParaprimaryce"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_92pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_weight="0.69"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{employeeMyProfilePageVM.employeeMyProfilePageModel.txtParaprimaryce}"
                    style="@style/txtPoppinssemibold16" tools:text="@string/lbl_my_profile"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackparaprimaryceOne"
            android:layout_height="@dimen/_693pxv"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent" style="@style/groupStyleblue_700">
            <LinearLayout android:id="@+id/linearColumnparaprimaryceOne"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_4">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtParaprimaryceOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_147pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{employeeMyProfilePageVM.employeeMyProfilePageModel.txtParaprimaryceOne}"
                    style="@style/txtPoppinsmedium14" tools:text="@string/lbl_name"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtInputprimaryd"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingStart="@dimen/_4pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:singleLine="true"
                    android:text="@{employeeMyProfilePageVM.employeeMyProfilePageModel.txtInputprimaryd}"
                    style="@style/txtSolidRoundedOutline" tools:text="@string/lbl_janet_kamau"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtParaprimaryceTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{employeeMyProfilePageVM.employeeMyProfilePageModel.txtParaprimaryceTwo}"
                    style="@style/txtPoppinsmedium14" tools:text="@string/lbl_role"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtInputprimarydOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingStart="@dimen/_3pxh"
                    android:paddingTop="@dimen/_16pxv"
                    android:singleLine="true"
                    android:text="@{employeeMyProfilePageVM.employeeMyProfilePageModel.txtInputprimarydOne}"
                    style="@style/txtSolidRoundedOutline" tools:text="@string/lbl_house_manager"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtParaprimaryceThree"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{employeeMyProfilePageVM.employeeMyProfilePageModel.txtParaprimaryceThree}"
                    style="@style/txtPoppinsmedium14" tools:text="@string/lbl_date_of_birth"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearInputprimaryd"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStylewhite_1">
                    <FrameLayout android:id="@+id/frameStackvector"
                        android:layout_height="@dimen/_18pxv"
                        android:layout_marginBottom="@dimen/_21pxv"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_marginTop="@dimen/_9pxv" android:layout_width="@dimen/_16pxh">
                        <ImageView android:id="@+id/imageVector"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_18pxh"
                            android:layout_width="@dimen/_16pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_vector_blue_700_18x16"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_blue_700_18x16"/>
                        <ImageView android:id="@+id/imageVectorOne"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_18pxh"
                            android:layout_width="@dimen/_16pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_vector_blue_700_18x16"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_blue_700_18x16"/>
                    </FrameLayout>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtParaprimaryceFour"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_15pxv"
                        android:layout_marginEnd="@dimen/_217pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_14pxv"
                        android:layout_weight="0.82"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{employeeMyProfilePageVM.employeeMyProfilePageModel.txtParaprimaryceFour}"
                        style="@style/txtPoppinsregular12_3" tools:text="@string/lbl_dec_16_2001"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtParaprimaryceFive"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{employeeMyProfilePageVM.employeeMyProfilePageModel.txtParaprimaryceFive}"
                    style="@style/txtPoppinsmedium14" tools:text="@string/lbl_email"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtEmail"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@{employeeMyProfilePageVM.employeeMyProfilePageModel.txtEmail}"
                    style="@style/txtSolidRoundedOutline" tools:text="@string/msg_janetkamau_apl"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnSave"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20pxv"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_55pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_save"
                    android:textAllCaps="false"
                    style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_save"/>
            </LinearLayout>
            <ImageView android:id="@+id/imagePhoto"
                android:layout_gravity="top|center"
                android:layout_height="@dimen/_123pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_125pxh"
                android:layout_marginStart="@dimen/_125pxh"
                android:layout_width="@dimen/_117pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_photo153172799}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_photo153172799"/>
        </FrameLayout>
    </LinearLayout>
</layout>
